# SmallTetris

./: Cargo.toml  build.rs  make_mips.sh  mips copy.json  mips.json
.cargo/: config
mips/: lscript.x
res/: character-tile-set.comp
src/: main.rs  tetris.rs
