[package]
name = "tetris"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

#[dependencies]
#stackalloc = { version = "1.2.0", features = ["no_std"]}

[target.'cfg(not(target_arch = "mips"))'.dependencies]
eframe = { git = "https://github.com/ParkerTenBroeck/egui" }

[build-dependencies]
png = {version = "*"}

[profile.release]
panic="abort"

[profile.dev]
panic="abort"